--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
           </div>
           <div class = "lcolumn">
             <h2>Hi, I'm Ryan Lehmkuhl!</h2>
-            <h5>(I also go by Rain, he/they 🙂)</h5>
+            <h5>I also go by Rain, he/they 🙂</h5>
+            <br>
             <p>
             I'm a fourth year PhD student at UC Berkeley (my first three years were at MIT) working under
             the excellent guidance of <a href="https://people.csail.mit.edu/henrycg/">Henry
@@ -48,9 +49,6 @@
 
             Before beginning my PhD, I worked at <a href="https://opaque.co/">Opaque</a>, a startup
             that provides a platform for collaborative data analytics on private data.
-            
-            <br><br>
-
             Prior to that, I graduated with a BS in EECS from UC Berkeley under the superb advisement
             of <a href="https://people.eecs.berkeley.edu/~raluca/">Raluca Ada
               Popa</a>, <a
@@ -63,11 +61,11 @@
             <!--most of my free time has been spent dancing (mainly house)–hit me
             <!--up if you want to take a class, sesh, or travel to a festival!
             <!--I always love meeting new people, especially other queer folk, so
-            <!--don't hesitate to reach out for whatever reason.
+            <!--don't hesitate to reach out for whatever reason.-->
 
-            <!--<br><br>-->
+            <br><br>
             
-            My email address is ryanleh [at] mit [dot] edu.
+            My email address is ryanleh [at] berkeley [dot] edu.
 
             </p>
             <div>
